# kuant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/rulesets/: README.md  main-protection.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  queue.py  run.sh
benchmarks/suites/: bench_core.py  bench_data.py  bench_edgecases.py  bench_options.py  bench_portfolio.py  bench_qm.py  bench_signals.py  bench_sindy.py  bench_stats.py  bench_text.py  bench_topology.py
docs/: README.md
docs/design/: README.md  Validation_Additions.md  errors-and-warnings-index.md  numerical-stability.md  plan-auto-and-backends.md  plan-options.md  plan-topology.md  roadmap.md  subpackage-scopes.md
docs/examples/: README.md  bs_price_surface.py  evt_tail_fit.py  hmm_regime_decode.py  iv_surface_from_market.py  permtest_your_signal.py  rolling_zscore_signal.py
docs/kernels/: README.md  bscall.md  bscalldelta.md  bscallrho.md  bsgamma.md  bsput.md  bsputdelta.md  bsputrho.md  bsvega.md  normcdf.md  normpdf.md  rollargminmax.md  rollbeta.md  rollemastd.md  rollmad.md  rollmean.md  rollmoments.md  rollquantile.md  zscore.md
examples/: README.md
kuant/: __init__.py  _validation.py  errors.py
kuant/backtest/: __init__.py
kuant/causal/: __init__.py  iv.py  pcalgo.py  rdd.py  synthcontrol.py
kuant/core/: __init__.py  _bs_common.py  _special_bridge.py  bscall.py  bscalldelta.py  bscallrho.py  bsgamma.py  bsput.py  bsputdelta.py  bsputrho.py  bsvega.py  gpdcdf.py  gpdpdf.py  gpdppf.py  lognormccdf.py  lognormcdf.py  logsumexp.py  logtccdf.py  logtcdf.py  normcdf.py  normpdf.py  normppf.py  tcdf.py  tpdf.py  tppf.py
kuant/data/: __init__.py  align.py  baragg.py  corpaction.py  panelize.py  resample.py  stitch.py
kuant/edgecases/: __init__.py  delistedhandling.py  nanpolicies.py  outlierpolicy.py
kuant/lifecycle/: __init__.py  detect.py  security.py
kuant/nulltest/: __init__.py  bootstrap.py  mht_correction.py  spa_test.py
kuant/options/: __init__.py  bscallcharm.py  bscalldelta.py  bscallrho.py  bscalltheta.py  bscolor.py  bsgamma.py  bsputcharm.py  bsputdelta.py  bsputrho.py  bsputtheta.py  bsspeed.py  bsvanna.py  bsvega.py  bsvolga.py  bszomma.py  callpayoff.py  chooserprice.py  deltabucket.py  digitalprice.py  gapprice.py  impvol.py  impvolbisection.py  lookbackprice.py  moneynessbucket.py  powerprice.py  putpayoff.py
kuant/portfolio/: __init__.py  blacklitterman.py  contribution.py  drawdown.py  hrp.py  meancvar.py  mintorsion.py  riskmetrics.py  riskparity.py  sharperatio.py  sortinoratio.py
kuant/qm/: __init__.py  bell_test.py  (+5 more)
scripts/: publish.sh
tests/: conftest.py  test_errors.py  test_tier1_audit.py  test_tier2_audit.py  test_tier2b_audit.py  test_validation.py
(+420 files in other folders)
