[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuant"
version = "0.3.0"
description = "GPU-accelerated quantitative research kernels. Kernel × quant."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Orange Shark" },
]
keywords = [
    "quant",
    "quantitative-finance",
    "options",
    "black-scholes",
    "greeks",
    "implied-volatility",
    "rolling-statistics",
    "hidden-markov-model",
    "sindy",
    "extreme-value-theory",
    "generalized-pareto",
    "student-t",
    "gpu",
    "cupy",
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Scramblehub/kuant"
Repository = "https://github.com/Scramblehub/kuant"
Issues = "https://github.com/Scramblehub/kuant/issues"
Documentation = "https://github.com/Scramblehub/kuant/tree/main/docs"

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0"]
topology = [
    "ripser>=0.6",
    "persim>=0.3",
]
sindy = [
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
    # Test-only deps for parity checks and parquet round-trip tests.
    # pandas is used for pandas.rolling parity in stats tests.
    # pyarrow is used for .to_parquet() round-trip tests across subpackages.
    "pandas>=2.0",
    "pyarrow>=15.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
]
all = ["kuant[gpu,topology,sindy,dev,docs]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kuant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires cupy + CUDA-capable GPU",
    "slow: takes longer than 1s to run",
    "benchmark: performance benchmark (not correctness)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
